added daysAgoDeleteStorageBackups,edited  uploadFile

--- a/config.env
+++ b/config.env
@@ -10,3 +10,4 @@ SECRETKEY = cc7044960c315285482cfc28bcb3ec4c6b1b9a34
 ENDPOINT = s3.ir-thr-at1.arvanstorage.ir
 ACCESSPERM =
 BUCKETNAME = mycucket
+DAYS_AGO_DELETE_STORAGE_BACKUPS = 4
