--- a/config.env
+++ b/config.env
@@ -2,7 +2,8 @@ NODE_ENV = development
 DATABSE = P67HiqS8lshD8
 HOST = localhost
 PORT = 27017
-LocalPORT = 2000
+LOCALHOST = 127.0.0.1
+LOCALPORT = 2000
 USERNAME = maede
 PASSWORD = 123123
 ACCESSKEY = c778153d-618f-4353-a2f0-ddc0bb194c99
@@ -11,3 +12,4 @@ ENDPOINT = s3.ir-thr-at1.arvanstorage.ir
 ACCESSPERM =
 BUCKETNAME = mycucket
 DAYS_AGO_DELETE_STORAGE_BACKUPS = 4
+BACKUP_INTERVALTIME = 32m
