--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
     "ms": "^2.1.3",
+    "multer": "^1.4.5-lts.1",
     "s3-mongo-backup": "^2.0.2"
   }
 }
