added permissionRestorer and generateKey for restore

--- a/config.env
+++ b/config.env
@@ -11,5 +11,13 @@ SECRETKEY = cc7044960c315285482cfc28bcb3ec4c6b1b9a34
 ENDPOINT = s3.ir-thr-at1.arvanstorage.ir
 ACCESSPERM =
 BUCKETNAME = mycucket
+
+DELETE_STORAGE_BACKUPS = true
 DAYS_AGO_DELETE_STORAGE_BACKUPS = 4
+DAYS_AGO_KEEP_STORAGE_BACKUPS = 5
+
 BACKUP_INTERVALTIME = 32m
+
+SECRET_KEY = 01234567890123456789012345678901
+KEY = db4a8df5-6d77-4df3-b8d0-a3560b8fc988
+
