--- a/config.env
+++ b/config.env
@@ -20,3 +20,9 @@ BACKUP_INTERVALTIME = 32m
 SECRET_KEY = 01234567890123456789012345678901
 KEY = db4a8df5-6d77-4df3-b8d0-a3560b8fc988
 
+API_USERNAME = api_user_2023
+API_PASSWORD = J$8p@W19qLFD4
+
+JWT_SECRET = 6a671694131335f7f366e6a518fcb794
+JWT_EXPIRES_IN = 1d
+JWT_COOKIE_EXPIRES_IN = 90
