--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
+    "jsonwebtoken": "^9.0.0",
     "ms": "^2.1.3",
     "multer": "^1.4.5-lts.1",
     "s3-mongo-backup": "^2.0.2"
