--- a/config.env
+++ b/config.env
@@ -2,8 +2,8 @@ NODE_ENV = development
 DATABSE = P67HiqS8lshD8
 HOST = localhost
 PORT = 27017
-USERNAME = maede
-PASSWORD = 123123
+USERNAME =root
+PASSWORD =ICA9C7GuhYXGlobKordyMKDXaLUIxv3G3Q
 ACCESSKEY = c778153d-618f-4353-a2f0-ddc0bb194c99
 SECRETKEY = cc7044960c315285482cfc28bcb3ec4c6b1b9a34
 ENDPOINT = s3.ir-thr-at1.arvanstorage.ir
