--- a/.env.save.example
+++ b/.env.save.example
@@ -1,12 +1,12 @@
 NODE_ENV = development
-DATABSE = P67HiqS8lshD8
+DATABSE = P6sd7HixxxqS8lshD8
 HOST = localhost
 PORT = 27017
-USERNAME = maede
-PASSWORD = 123123
-ACCESSKEY = c778153d-618f-4353-a2f0-ddc0bb194c99
-SECRETKEY = cc7044960c315285482cfc28bcb3ec4c6b1b9a34
-ENDPOINT = s3.ir-thr-at1.arvanstorage.ir
+USERNAME = masdede
+PASSWORD = 123asd123
+ACCESSKEY = c778153d-618f-4asdasd353-a2f0-ddc0bb194c99
+SECRETKEY = cc7044asd960c315285482cfc28bcb3ec4c6b1b9a34
+ENDPOINT = 
 ACCESSPERM =
 BUCKETNAME = mycucket
 
@@ -17,12 +17,12 @@ DELETE_STORAGE_BACKUPS = true
 DAYS_AGO_DELETE_STORAGE_BACKUPS = 5
 BACKUP_INTERVALTIME = 32m
 
-SECRET_KEY = 01234567890123456789012345678901
-API_KEY = db4a8df5-6d77-4df3-b8d0-a3560b8fc988
+SECRET_KEY = 012345678asdasdg90123456789012345678901
+API_KEY = db4a8df5-edf6d77-4df3-adfefb8d0-a3560b8fc988
 
-API_USERNAME = api_user_2023
-API_PASSWORD = J$8p@W19qLFD4
+API_USERNAME = api_uwedfseasdr_2023
+API_PASSWORD = Jedf$8p@W1asdfgr9qLFD4
 
-JWT_SECRET = 6a671694131335f7f366e6a518fcb794
+JWT_SECRET = 6a6716941313ewqfdewf35f7f3edfew66e6a518fcb794
 JWT_EXPIRES_IN = 1d
 JWT_COOKIE_EXPIRES_IN = 90
