added username and password for generateKey

--- a/.env.save.example
+++ b/.env.save.example
@@ -26,3 +26,6 @@ API_PASSWORD = J$8p@W19qLFD4
 JWT_SECRET = 6a671694131335f7f366e6a518fcb794
 JWT_EXPIRES_IN = 1d
 JWT_COOKIE_EXPIRES_IN = 90
+
+API_GENERATEKEY_USERNAME = iOLehmas
+API_GENERATEKEY_PASSWORD = 65545158
