--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@tus/file-store": "^1.0.0-beta.1",
+    "@tus/server": "^1.0.0-beta.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -18,6 +20,7 @@
     "jsonwebtoken": "^9.0.0",
     "ms": "^2.1.3",
     "multer": "^1.4.5-lts.1",
-    "s3-mongo-backup": "^2.0.2"
+    "s3-mongo-backup": "^2.0.2",
+    "tus-js-client": "^3.1.0"
   }
 }
