added iPGuardMiddleware, errorController for handle invalid ip. clean code

--- a/.env.save.example
+++ b/.env.save.example
@@ -29,3 +29,5 @@ JWT_COOKIE_EXPIRES_IN = 90
 
 API_GENERATEKEY_USERNAME = iOLehmas
 API_GENERATEKEY_PASSWORD = 65545158
+
+WHITELIST = 127.0.0.1,example.com
