--- a/.env.save.example
+++ b/.env.save.example
@@ -30,4 +30,6 @@ JWT_COOKIE_EXPIRES_IN = 90
 API_GENERATEKEY_USERNAME = iOLehmas
 API_GENERATEKEY_PASSWORD = 65545158
 
-WHITELIST = 127.0.0.1,example.com
+WHITELIST = 127.0.0.1,https://example.com
+
+ENABLE_CORS = false
