added ENABLE_CHECKIP , LOG_LEVELS in .env file, added logger to backupScheduler and ipGuard

--- a/.env.save.example
+++ b/.env.save.example
@@ -30,6 +30,8 @@ JWT_COOKIE_EXPIRES_IN = 90
 API_GENERATEKEY_USERNAME = iOLehmas
 API_GENERATEKEY_PASSWORD = 65545158
 
-WHITELIST = 127.0.0.1,https://example.com
-
+WHITELIST = *
 ENABLE_CORS = false
+ENABLE_CHECKIP = false
+
+LOG_LEVELS = "debug,error,warn,info"
