--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "ms": "^2.1.3",
     "multer": "^1.4.5-lts.1",
     "s3-mongo-backup": "^2.0.2",
-    "tus-js-client": "^3.1.0"
+    "tus-js-client": "^3.1.0",
+    "winston": "^3.9.0",
+    "winston-daily-rotate-file": "^4.7.1"
   }
 }
