--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@tus/file-store": "^1.0.0-beta.1",
     "@tus/server": "^1.0.0-beta.6",
+    "aws-sdk": "^2.1618.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
